[tool.poetry]
name = "nlmyo"
version = "0.1.0"
description = ""
authors = ["Corentin"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
ipykernel = "^6.18.3"
pdf2image = "^1.16.0"
pytesseract = "^0.3.10"
numpy = "^1.23.5"
opencv-python-headless = "^4.6.0"
langchain = "^0.0.121"
openai = "^0.27.2"
streamlit = "^1.20.0"
streamlit-chat = "^0.0.2.2"
tiktoken = "^0.3.2"
chromadb = "^0.3.11"
dvc = {extras = ["ssh"], version = "^2.51.0"}
instructorembedding = "^1.0.0"
wandb = "^0.14.2"
llama-cpp-python = "^0.1.33"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
pytest = "^7.2.0"
black = "^22.10.0"
ruff = "^0.0.149"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
